starting base client-side functionality

--- a/js/test/index.html
+++ b/js/test/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Chess</title>
+    <title>RTS</title>
     <link rel="stylesheet" href="qunit-1.12.0.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -15,5 +15,10 @@
     <script src="../lib/underscore.js"></script>
     <script src="../lib/jsmessage.js"></script>
 
+    <script src="../character.js"></script>
+    <script src="characterTest.js"></script>
+
+    <script src="../field.js"></script>
+    <script src="fieldTest.js"></script>
 </body>
 </html>
